# uhttpredir

./: .gitignore  COPYING  Makefile.am  Makefile.vcs  common.h  configure.ac
uhttpredir/: Makefile.am  app.c  app.h  log.c  log.h  main.c  options.c  options.h  utils.c  utils.h  win32inc.h  win32svc.c  win32svc.h
